--- a/prepros.config
+++ b/prepros.config
@@ -118,6 +118,7 @@
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -127,13 +128,12 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
           "@babel/plugin-proposal-private-methods": false,
-          "@babel/plugin-proposal-throw-expressions": false,
-          "@babel/plugin-proposal-class-static-block": false,
-          "@babel/plugin-proposal-logical-assignment-operators": false
+          "@babel/plugin-proposal-throw-expressions": false
         },
         "customPresets": [],
         "customPlugins": []
@@ -167,6 +167,7 @@
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -176,13 +177,12 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
               "@babel/plugin-proposal-private-methods": false,
-              "@babel/plugin-proposal-throw-expressions": false,
-              "@babel/plugin-proposal-class-static-block": false,
-              "@babel/plugin-proposal-logical-assignment-operators": false
+              "@babel/plugin-proposal-throw-expressions": false
             },
             "customPresets": [],
             "customPlugins": []
@@ -917,7 +917,7 @@
       {
         "file": "src/pug/index.pug",
         "config": {
-          "customOutput": "prd\\index.html"
+          "customOutput": "index.html"
         }
       },
       {
@@ -927,15 +927,56 @@
         }
       },
       {
+        "file": "src/pug/pages/about.pug",
+        "config": {
+          "customOutput": "about.html"
+        }
+      },
+      {
+        "file": "src/pug/pages/art.pug",
+        "config": {
+          "customOutput": "art.html"
+        }
+      },
+      {
+        "file": "src/pug/pages/blog.pug",
+        "config": {
+          "customOutput": "blog.html"
+        }
+      },
+      {
+        "file": "src/pug/pages/web-dev.pug",
+        "config": {
+          "customOutput": "web-dev.html"
+        }
+      },
+      {
+        "file": "src/pug/pages/webdev.pug",
+        "config": {
+          "customOutput": "page\\webdev.html",
+          "compileImported": true
+        }
+      },
+      {
         "file": "src/scss/organisms/_carousel.scss",
         "config": {
           "autoCompile": true
         }
       },
       {
+        "file": "src/scss/organisms/_menu.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "src/scss/style.scss",
         "config": {
-          "customOutput": "prd\\style.css"
+          "customOutput": "style.css"
         }
       }
     ]
