refactoring html / pug files

--- a/prepros.config
+++ b/prepros.config
@@ -917,7 +917,8 @@
       {
         "file": "src/pug/index.pug",
         "config": {
-          "customOutput": "index.html"
+          "customOutput": "index.html",
+          "compileImported": true
         }
       },
       {
