refactoring html / pug structure

--- a/prepros.config
+++ b/prepros.config
@@ -959,6 +959,12 @@
         }
       },
       {
+        "file": "src/scss/main.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "src/scss/organisms/_carousel.scss",
         "config": {
           "autoCompile": true
