init maquetation, nav

--- a/prepros.config
+++ b/prepros.config
@@ -915,6 +915,18 @@
     },
     "files": [
       {
+        "file": "src/pug/component/head.pug",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "src/pug/component/nav.pug",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
         "file": "src/pug/index.pug",
         "config": {
           "customOutput": "index.html",
