refactoring base variables with @use

--- a/prepros.config
+++ b/prepros.config
@@ -997,6 +997,12 @@
         "config": {
           "customOutput": "style.css"
         }
+      },
+      {
+        "file": "src/scss/test/test-main.scss",
+        "config": {
+          "customOutput": "src\\scss\\test\\test-main.css"
+        }
       }
     ]
   }
