menu maquetation, contact page refactoring

--- a/prepros.config
+++ b/prepros.config
@@ -915,6 +915,12 @@
     },
     "files": [
       {
+        "file": "src/pug/component/about.pug",
+        "config": {
+          "customOutput": "about.html"
+        }
+      },
+      {
         "file": "src/pug/component/head.pug",
         "config": {
           "compileImported": true
