init music page

--- a/prepros.config
+++ b/prepros.config
@@ -943,6 +943,12 @@
         }
       },
       {
+        "file": "src/pug/music.pug",
+        "config": {
+          "customOutput": "music.html"
+        }
+      },
+      {
         "file": "src/pug/organisms/carousel.pug",
         "config": {
           "autoCompile": false
