--- a/prepros.config
+++ b/prepros.config
@@ -930,6 +930,13 @@
         }
       },
       {
+        "file": "src/pug/component/menu.pug",
+        "config": {
+          "compileImported": true,
+          "autoCompile": false
+        }
+      },
+      {
         "file": "src/pug/component/nav.pug",
         "config": {
           "compileImported": true
