--- a/prepros.config
+++ b/prepros.config
@@ -918,6 +918,18 @@
     },
     "files": [
       {
+        "file": "src/pug/blog.pug",
+        "config": {
+          "customOutput": "blog.html"
+        }
+      },
+      {
+        "file": "src/pug/blog/post.pug",
+        "config": {
+          "customOutput": "blog\\post.html"
+        }
+      },
+      {
         "file": "src/pug/component/about.pug",
         "config": {
           "customOutput": "about.html"
