refactoring head tag, check post section rooting

--- a/prepros.config
+++ b/prepros.config
@@ -918,6 +918,12 @@
     },
     "files": [
       {
+        "file": "src/pug/about.pug",
+        "config": {
+          "customOutput": "about.html"
+        }
+      },
+      {
         "file": "src/pug/blog.pug",
         "config": {
           "customOutput": "blog.html"
@@ -1002,6 +1008,12 @@
         "config": {
           "customOutput": "page\\webdev.html",
           "compileImported": true
+        }
+      },
+      {
+        "file": "src/pug/post.pug",
+        "config": {
+          "customOutput": "post.html"
         }
       },
       {
