finish page post and audiovisual quickgalery section

--- a/prepros.config
+++ b/prepros.config
@@ -924,6 +924,12 @@
         }
       },
       {
+        "file": "src/pug/audiovisual.pug",
+        "config": {
+          "customOutput": "audiovisual.html"
+        }
+      },
+      {
         "file": "src/pug/blog.pug",
         "config": {
           "customOutput": "blog.html"
