details for responsive design

--- a/prepros.config
+++ b/prepros.config
@@ -1023,6 +1023,12 @@
         }
       },
       {
+        "file": "src/scss/component/_about.scss",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
         "file": "src/scss/main.scss",
         "config": {
           "autoCompile": false
