my-header, with no css

--- a/prepros.config
+++ b/prepros.config
@@ -1029,6 +1029,13 @@
         }
       },
       {
+        "file": "src/scss/component/_nav.scss",
+        "config": {
+          "autoCompile": true,
+          "compileImported": true
+        }
+      },
+      {
         "file": "src/scss/main.scss",
         "config": {
           "autoCompile": false
