--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-loader": "^6.3.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "json-loader": "^0.5.7",
     "style-loader": "^3.3.0",
     "webpack": "^5.55.1",
     "webpack-cli": "^4.8.0",
@@ -48,6 +49,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "three": "^0.133.1"
   }
 }
